--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,45 +9,42 @@ on:
 jobs:
   flake8-check:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-
-    - name: Run flake8
-      run: |
-        flake8 .
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          
+      - name: Run flake8
+        run: |
+          flake8 .
+  
   build:
     runs-on: ubuntu-latest
     needs: flake8-check
-    
     steps:
       - name: Check out the repo
-      uses: actions/checkout@v2
-      
+        uses: actions/checkout@v2
+        
       - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      
+        uses: docker/setup-buildx-action@v1
+        
       - name: Login to Docker
-      uses: docker/login-action@v1
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-      
-  # Пуш образа в Docker Hub
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: unluckykot/testcc:latest
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: unluckykot/testcc:latest
